# wear-pico

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README.md  Smartwatch.fig  TODO.md  WearPico.fig  docker-compose.yaml  libgen.sh  log  todo.sh
.github/workflows/: static.yml
docs/html/: .style.css  DEV__Config_8c.html  DEV__Config_8c.js  DEV__Config_8c__incl.dot  DEV__Config_8c_a24c00e93ae471acf95701158bfd75d9f_cgraph.dot  DEV__Config_8c_abb67aca2219ffce505bd6aef08c17716_cgraph.dot  DEV__Config_8h.html  DEV__Config_8h.js  DEV__Config_8h__dep__incl.dot  DEV__Config_8h__incl.dot  DEV__Config_8h_a7a07ca160d6f70305f39df549b409c57_cgraph.dot  DEV__Config_8h_source.html  Debug_8h.html  Debug_8h.js  Debug_8h__dep__incl.dot  Debug_8h__incl.dot  Debug_8h_source.html  GUI__Paint_8c.html  GUI__Paint_8c.js  GUI__Paint_8c__incl.dot  GUI__Paint_8c_a0c08ac4a230283bab34bd04f6e1ee267_cgraph.dot  GUI__Paint_8c_a2c2ad0a6d3dccaeeed60fd3ef44c644c_cgraph.dot  GUI__Paint_8c_a32a1723ef6f0bf9b75dc0571379c9960_cgraph.dot  GUI__Paint_8c_aa9154b1fb7a40d79798eccbc51761925_cgraph.dot  GUI__Paint_8c_ab66aaa5613532b16201bbdd907ae673a_cgraph.dot  GUI__Paint_8c_ab8d5be88313fa0bbca71ff2b1393a6cc_cgraph.dot  GUI__Paint_8c_ad0d9aff01666febe9f9436036f5e0c0c_cgraph.dot  GUI__Paint_8c_ae8212bbad5a3d65049f3b83b2a68ab26_cgraph.dot  GUI__Paint_8h.html  GUI__Paint_8h.js  GUI__Paint_8h__dep__incl.dot  GUI__Paint_8h__incl.dot  GUI__Paint_8h_a00b72573a99616e23a1d90bc2acb579e_cgraph.dot  GUI__Paint_8h_a0c1a572d033d02b0d262c026d0462daa_cgraph.dot  GUI__Paint_8h_a3f3fab298d3efaa84f39253946ce1901_cgraph.dot  GUI__Paint_8h_aba6de57093514756a019e4928a1e1187_cgraph.dot  GUI__Paint_8h_afb87775306fa2e39895c1df7e3779439_cgraph.dot  GUI__Paint_8h_source.html  ImageData_8c.html  ImageData_8c.js  (+463 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  defines_10.js  defines_11.js  (+93 more)
misc/: alarm_frame.h  events_frame.h  media_frame.h  pedometer_frame.h  stopwatch_frame.h  watch_empty.h
pico/: .gitignore  CMakeLists.txt  Dockerfile  compile_flags.txt  docker-compose.yaml  install.sh  libgen  libgen.sh
pico/smartwatch/: CMakeLists.txt
pico/smartwatch/include/: btstack_config.h  msg.h  screen.h  screen_data.h  sw_util.h
pico/smartwatch/src/: bt.c  main.c  msg.c  screen.c
pico/src/: main.c
smartwatch/: .clang-format  CMakeLists.txt  compile_flags.txt  sw.gatt
smartwatch/include/: clock.h  global.h  msg.h  protocol.h  resources.h  screen.h  screen_data.h  ui_frame.h  util.h  watch_empty.h
smartwatch/include/ui/: common.h  menu.h
smartwatch/resources/: CMakeLists.txt  clockfont.c  font.c  resources.h  watch.c
smartwatch/resources/menu/: menu_events.c  menu_media.c
smartwatch/src/: coretest.c  main.c  msg.c  protocol.c  screen.c  screen_data.c
smartwatch/src/ui/: apps.c  commmon.c  global.c  menu.c
src/: CMakeLists.txt  README.md  compile_flags.txt  main.c  todo.sh
src/net/: protocol.c  protocol.h
src/resources/: CMakeLists.txt
src/resources/include/: resources.h
src/resources/src/: menu_alarm.c  menu_pedometer.c  menu_stopwatch.c  stopwatch.c
src/sw_apps/: CMakeLists.txt  apps.h  apps_common.h
src/sw_apps/src/: alarm.c  apps.c  apps_common.c  calendar.c  chrono.c  clock.c  debugger.c  display.c  media.c  menu.c  notepad.c  pedometer.c  popup.c  util.c
src/sw_bt/: CMakeLists.txt  bt.h  sw_bt.gatt
src/sw_bt/src/: ble.c  bt.c  parser.c
src/sw_common/: CMakeLists.txt  types.h  util.h
src/sw_common/src/: dates.c  util.c
src/sw_os/: CMakeLists.txt  dev.h  gyro.h  state.h
src/sw_os/src/: dev.c  gyro.c  state.c
src/sw_res/: CMakeLists.txt  resources.h
src/sw_res/src/: alarm.c  alarm_buttons.c  call.c  clear.c  font.c  font40.c  font60.c  gesture.c  media.c  menu.c  menu_alarm.c  menu_events.c  menu_media.c  menu_pedometer.c  menu_stopwatch.c  notepad.c  notify.c  resources.c  step.c  stopwatch.c  titlebar.c  tray.c  watch.c
src/sw_utils/: CMakeLists.txt  util.h
src/sw_utils/include/: global.h  peripherals.h
src/sw_utils/src/: global.c  peripherals.c  util.c
src/ui/: CMakeLists.txt
src/ui/include/: common.h  menu.h
src/ui/src/: apps.c  common.c  menu.c
src/wp_apps/: CMakeLists.txt  apps.h
src/wp_apps/src/: alarm.c  calendar.c  chrono.c  clock.c  debugger.c  display.c  media.c  menu.c  notepad.c  pedometer.c  popup.c  util.c
src/wp_bt/: CMakeLists.txt  bt.h
src/wp_bt/src/: bt.c  parser.c
src/wp_common/: CMakeLists.txt  types.h  util.h
src/wp_common/src/: dates.c  util.c
src/wp_dev/: CMakeLists.txt  dev.h  state.h
src/wp_dev/src/: dev.c  gyro.c  state.c
src/wp_res/: CMakeLists.txt  resources.h
src/wp_res/src/: alarm.c  alarm_buttons.c  call.c  font40.c  font60.c  gesture.c  media.c  menu.c  notepad.c  notify.c  resources.c  step.c  stopwatch.c  titlebar.c  tray.c
